--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@types/jest": "^25.1.3",
     "@types/mongodb": "^3.3.16",
+    "conventional-changelog-cli": "^2.0.31",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
