--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "rollup -c",
     "build": "yarn build:types && yarn build:js",
+    "prepublish": "yarn run build",
     "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@types/jest": "^25.1.3",
     "@types/mongodb": "^3.3.16",
+    "commitlint": "^8.3.5",
     "conventional-changelog-cli": "^2.0.31",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
@@ -40,7 +44,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
