--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.2",
+    "standard-version": "^7.1.0",
     "typescript": "^3.8.2"
   },
   "engines": {
