--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
     "mongodb": "^3.5.5",
-    "prettier": "^1.19.1",
+    "prettier": "prettier/prettier#next",
     "rollup": "^2.1.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
