--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "tsc --noEmit",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "rollup -c",
-    "build": "yarn build:types && yarn build:js",
+    "build": "concurrently yarn:build:*",
     "prepare": "yarn run build",
     "test": "jest"
   },
@@ -26,6 +26,7 @@
     "@types/jest": "^26.0.0",
     "@types/mongodb": "^3.5.2",
     "commitlint": "^9.0.1",
+    "concurrently": "^5.2.0",
     "conventional-changelog-cli": "^2.0.31",
     "husky": "^4.2.3",
     "jest": "^26.0.0",
