--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Filipe Guerra <alias.mac@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "tsc --noEmit",
+    "lint": "concurrently yarn:lint:*",
+    "lint:eslint": "eslint .",
+    "lint:ts": "tsc --noEmit",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "rollup -c",
     "build": "concurrently yarn:build:*",
@@ -25,9 +27,12 @@
     "@commitlint/config-conventional": "^9.0.1",
     "@types/jest": "^26.0.4",
     "@types/mongodb": "^3.5.25",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "commitlint": "^9.0.1",
     "concurrently": "^5.2.0",
     "conventional-changelog-cli": "^2.0.34",
+    "eslint": "^7.4.0",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
