--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [12.x, 13.x]
+        node-version: [12.x, 13.x, 14.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -29,8 +29,9 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
-        node-version: [12.x, 13.x]
+        node-version: [12.x, 13.x, 14.x]
         mongodb-version: ['4.0', '4.2']
 
     env:
