--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "standard-version": "^9.1.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "engines": {
