--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,6 @@
   "exclude": [
     "node_modules",
     "dist",
-    "**/tests/**",
-    "**/__tests__/**",
-    "**/__mocks__/**",
-    "**/__fixtures__/**"
+    "**/tests/**"
   ]
 }
