--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "esnext",
     "isolatedModules": true,
     "strict": true,
+    "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
@@ -11,13 +12,9 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "declarationDir": "dist/types",
-    "declaration": true
+    "declaration": true,
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
   ],
-  "exclude": [
-    "node_modules",
-    "dist",
-  ]
 }
