--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "build:types": "tsc -p tsconfig.production.json",
     "build:js": "rollup -c",
     "build": "concurrently yarn:build:*",
-    "prepare": "yarn run build",
+    "prepare": "concurrently yarn:prepare:*",
+    "prepare:build": "yarn build",
+    "prepare:husky": "husky install",
     "test": "jest"
   },
   "devDependencies": {
@@ -33,7 +35,7 @@
     "concurrently": "^6.0.0",
     "conventional-changelog-cli": "^2.1.1",
     "eslint": "^7.19.0",
-    "husky": "^4.3.8",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "mongodb": "^3.6.4",
@@ -49,12 +51,6 @@
   },
   "engines": {
     "node": ">=12.14"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   },
   "lint-staged": {
     "*.{js,ts,css,md}": "prettier --write"
