--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [12.x, 13.x, 14.x]
+        node-version: [12.x, 13.x, 14.x, 15.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -31,7 +31,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [12.x, 13.x, 14.x]
+        node-version: [12.x, 13.x, 14.x, 15.x]
         mongodb-version: ['4.0', '4.2', '4.4']
 
     env:
