--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@babel/preset-typescript": "^7.13.0",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@types/jest": "^26.0.23",
     "@types/mongodb": "^3.6.12",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
@@ -41,9 +44,6 @@
     "mongodb": "^3.6.6",
     "prettier": "^2.3.0",
     "rollup": "^2.47.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "standard-version": "^9.3.0",
     "ts-node": "^9.1.1",
