--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/mongodb": "^3.6.12",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "builtin-modules": "^3.2.0",
     "commitlint": "^12.1.1",
     "concurrently": "^6.1.0",
     "conventional-changelog-cli": "^2.1.1",
@@ -44,7 +45,6 @@
     "mongodb": "^3.6.6",
     "prettier": "^2.3.0",
     "rollup": "^2.47.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
     "standard-version": "^9.3.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
