chore(prettier): code style fix on yaml files

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "node": ">=12.14"
   },
   "lint-staged": {
-    "*.{js,ts,css,md}": "prettier --write"
+    "*.{js,ts,css,md,yml}": "prettier --write"
   },
   "standard-version": {
     "scripts": {
