--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,9 @@ updates:
     schedule:
       interval: daily
     open-pull-requests-limit: 10
-    commit_message:
+    commit-message:
       prefix: 'fix'
-      prefix_development: 'chore'
+      prefix-development: 'chore'
       include: scope
     reviewers:
       - alias-mac
@@ -19,9 +19,9 @@ updates:
     schedule:
       interval: daily
     open-pull-requests-limit: 10
-    commit_message:
+    commit-message:
       prefix: 'fix'
-      prefix_development: 'chore'
+      prefix-development: 'chore'
       include: scope
     reviewers:
       - alias-mac
