--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "typescript": "^4.2.4"
   },
   "engines": {
-    "node": ">=12.14"
+    "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
   },
   "lint-staged": {
     "*.{js,ts,css,md,yml}": "prettier --write"
