--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,5 @@
     "declarationDir": "dist/types",
     "declaration": true,
   },
-  "include": [
-    "src/**/*",
-  ],
+  "include": ["src/**/*"],
 }
