feat: add types to peerDeps (optional)
This will help consumers of this library to align types with minimum
requirements to have a good developer experience.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         node-version: [12.x, 14.x, 16.x]
         mongodb-version: ['4.0', '4.2', '4.4']
         # these should match the minimum peerDependencies definitions
+        mongodb-types: ['3.6.20', '^3.6.20']
         mongodb-lib: ['3.6.7', '^3.6.7']
 
     env:
@@ -54,6 +55,8 @@ jobs:
 
       - run: yarn install --frozen-lockfile
 
+      # peerDeps installs
+      - run: yarn add -D @types/mongodb@${{matrix.mongodb-types}}
       - run: yarn add -D mongodb@${{matrix.mongodb-lib}}
 
       - run: yarn test --coverage
