--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "test": "jest"
   },
   "peerDependencies": {
+    "@types/mongodb": "^3.6.20",
     "mongodb": "^3.6.7"
+  },
+  "peerDependenciesMeta": {
+    "@types/mongodb": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -34,7 +40,7 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/jest": "^27.4.0",
-    "@types/mongodb": "^3.6.12",
+    "@types/mongodb": "^3.6.20",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "builtin-modules": "^3.2.0",
