--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "typescript": "^4.5.4"
   },
   "engines": {
-    "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
+    "node": "^14.17.0 || >=16.0.0"
   },
   "standard-version": {
     "scripts": {
