--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:ts": "tsc",
     "build": "concurrently yarn:build:*",
     "build:types": "tsc -p tsconfig.production.json",
-    "build:js": "rollup -c",
+    "build:js": "rollup -c rollup.config.ts --configPlugin typescript",
     "prepare": "concurrently yarn:prepare:*",
     "prepare:build": "yarn build",
     "prepare:husky": "husky install",
@@ -32,6 +32,7 @@
       "optional": true
     }
   },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
@@ -41,6 +42,7 @@
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/jest": "^28.1.5",
     "@types/mongodb": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
