--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "mongodb": "^4.3.1"
+    "mongodb": "^4.3.1 || ^5.0.0"
   },
   "peerDependenciesMeta": {
     "@types/mongodb": {
