--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [14.x, 16.x, 18.x]
-        mongodb-version: ['4.0', '4.2', '4.4', '5.0']
+        mongodb-version: ['4.0', '4.2', '4.4', '5.0', '6.0']
         mongodb-lib: ['4.3.1', '^4.3.1', '5.0.0', '^5.0.0']
 
     env:
