--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "typescript": "^4.7.4"
   },
   "engines": {
-    "node": "^14.17.0 || >=16.0.0"
+    "node": ">=16.20.1"
   },
   "standard-version": {
     "scripts": {
