--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - run: yarn install --frozen-lockfile
+      - run: npm ci
 
-      - run: yarn run build
+      - run: npm run build
 
   test:
     runs-on: ubuntu-latest
@@ -51,12 +51,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - run: yarn install --frozen-lockfile
+      - run: npm ci
 
       # peerDeps installs
-      - run: yarn add -D mongodb@${{matrix.mongodb-lib}}
+      - run: npm add -D mongodb@${{matrix.mongodb-lib}}
 
-      - run: yarn test --coverage
+      - run: npm run test -- --coverage
         env:
           CI: true
           MONGO_DB_NAME: mongodb-queue
