--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
       "optional": true
     }
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
@@ -47,6 +46,7 @@
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
     "builtin-modules": "^4.0.0",
@@ -62,7 +62,7 @@
     "rollup": "^4.29.1",
     "standard-version": "^9.5.0",
     "ts-node": "^10.9.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": ">=18.20.5"
