--- a/package.json
+++ b/package.json
@@ -47,8 +47,6 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
-    "@typescript-eslint/eslint-plugin": "^8.18.2",
-    "@typescript-eslint/parser": "^8.18.2",
     "builtin-modules": "^4.0.0",
     "commitlint": "^19.6.1",
     "concurrently": "^9.1.0",
@@ -62,7 +60,8 @@
     "rollup": "^4.29.1",
     "standard-version": "^9.5.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.2"
   },
   "engines": {
     "node": ">=18.20.5"
