--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint:ts": "tsc",
     "build": "concurrently 'npm:build:*'",
     "build:types": "tsc -p tsconfig.production.json",
-    "build:js": "rollup -c rollup.config.mjs",
+    "build:js": "rollup --config rollup.config.ts --configPlugin typescript --configImportAttributesKey with",
     "prepare": "concurrently 'npm:prepare:*'",
     "prepare:build": "npm run build",
     "prepare:husky": "husky install",
