--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "declarationDir": "dist/types",
     "declaration": true,
   },
-  "include": ["src/**/*", "rollup.config.mjs"],
+  "include": ["src/**/*", "rollup.config.ts"],
 }
