feat: drop support for MongoDB 4.0
BREAKING CHANGE: drop support for MongoDB 4.0.
Active maintenance ended in April 2022.
The `mongodb` npm driver removed pre-4.2 compatibility in v6.20.0.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [18.x, 20.x, 22.x]
-        mongodb-version: ['4.0', '4.2', '4.4', '5.0', '6.0']
+        mongodb-version: ['4.2', '4.4', '5.0', '6.0']
         mongodb-lib: ['5.7.0', '^5.7.0', '6.0.0', '^6.0.0']
 
     env:
