feat: drop support for NodeJS 18.x
BREAKING CHANGE: drop support for NodeJS 18.x.
Active maintenance ended in April 2025.
Aligns with `mongodb` driver requirement of NodeJS >=20.19.0.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [18.x, 20.x, 22.x, 24.x]
+        node-version: [20.x, 22.x, 24.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [18.x, 20.x, 22.x, 24.x]
+        node-version: [20.x, 22.x, 24.x]
         mongodb-version: ['4.2', '4.4', '5.0', '6.0']
         mongodb-lib: ['5.7.0', '^5.7.0', '6.0.0', '^6.0.0']
 
