--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [20.x, 22.x, 24.x]
-        mongodb-version: ['4.2', '4.4', '5.0', '6.0']
+        mongodb-version: ['4.2', '4.4', '5.0', '6.0', '7.0', '8.0']
         mongodb-lib: ['5.7.0', '^5.7.0', '6.0.0', '^6.0.0', '7.0.0', '^7.0.0']
 
     env:
