--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,11 +97,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        bun-version: ['1.2', '1.3']
         mongodb-version: ['4.2', '4.4', '5.0', '6.0', '7.0', '8.0']
         mongodb-lib: ['^5.7.0', '^6.0.0', '^7.0.0']
 
     env:
-      BUN: latest
+      BUN: ${{ matrix.bun-version }}
       MONGO: ${{ matrix.mongodb-version }}
       MONGOLIB: ${{ matrix.mongodb-lib }}
 
@@ -116,6 +117,8 @@ jobs:
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: ${{ matrix.bun-version }}
 
       - run: bun install
 
