--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "typescript-eslint": "^8.18.2"
   },
   "engines": {
+    "bun": ">=1.2.20",
     "node": ">=20.19.0"
   },
   "standard-version": {
