--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,9 +1,14 @@
-name: CI
+name: 🔨 Build & Test
 
-on: [push]
+on: [push, pull_request]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
+    name: 🔨 Build
     runs-on: ubuntu-latest
 
     strategy:
@@ -12,21 +17,23 @@ jobs:
         node-version: [20.x, 22.x, 24.x]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: ⬇️ Checkout
+        uses: actions/checkout@v4
 
-      - name: Setup Bun
+      - name: 🥟 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
           bun-version-file: .bun-version
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: 🟢 Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
-      - run: bun install
+      - name: 📦 Install dependencies
+        run: bun install
 
-      - name: Build
+      - name: 🔨 Build
         run: |
           if [[ "${{ matrix.node-version }}" == "20.x" ]]; then
             npm run build
@@ -35,6 +42,7 @@ jobs:
           fi
 
   test-node:
+    name: 🧪 Test Node.js
     runs-on: ubuntu-latest
 
     strategy:
@@ -56,24 +64,26 @@ jobs:
           - 27017:27017
 
     steps:
-      - uses: actions/checkout@v4
+      - name: ⬇️ Checkout
+        uses: actions/checkout@v4
 
-      - name: Setup Bun
+      - name: 🥟 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
           bun-version-file: .bun-version
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: 🟢 Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
-      - run: bun install
+      - name: 📦 Install dependencies
+        run: bun install
 
-      # peerDeps installs
-      - run: bun add -D mongodb@${{matrix.mongodb-lib}}
+      - name: 📦 Install MongoDB driver
+        run: bun add -D mongodb@${{matrix.mongodb-lib}}
 
-      - name: Run tests
+      - name: 🧪 Run tests
         run: |
           if [[ "${{ matrix.node-version }}" == "20.x" ]]; then
             npm run test -- --coverage
@@ -84,7 +94,7 @@ jobs:
           CI: true
           MONGO_DB_NAME: mongodb-queue
 
-      - name: Code Coverage
+      - name: 📊 Code Coverage
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -92,6 +102,7 @@ jobs:
           fail_ci_if_error: true
 
   test-bun:
+    name: 🧪 Test Bun
     runs-on: ubuntu-latest
 
     strategy:
@@ -113,24 +124,27 @@ jobs:
           - 27017:27017
 
     steps:
-      - uses: actions/checkout@v4
+      - name: ⬇️ Checkout
+        uses: actions/checkout@v4
 
-      - name: Setup Bun
+      - name: 🥟 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: ${{ matrix.bun-version }}
 
-      - run: bun install
+      - name: 📦 Install dependencies
+        run: bun install
 
-      # peerDeps installs
-      - run: bun add -D mongodb@${{matrix.mongodb-lib}}
+      - name: 📦 Install MongoDB driver
+        run: bun add -D mongodb@${{matrix.mongodb-lib}}
 
-      - run: bun run test -- --coverage
+      - name: 🧪 Run tests
+        run: bun run test -- --coverage
         env:
           CI: true
           MONGO_DB_NAME: mongodb-queue
 
-      - name: Code Coverage
+      - name: 📊 Code Coverage
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
